kubernetes-manifests/account-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service
spec:
  selector:
    matchLabels:
      app: account-service
  template:
    metadata:
      labels:
        app: account-service
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: server
          securityContext:
          # allowPrivilegeEscalation: false
          # capabilities:
          #   drop:
          #     - all
          # privileged: false
          # readOnlyRootFilesystem: true
          image: us-central1-docker.pkg.dev/com-b2allsolution-autolive/microservices/account
          ports:
            - containerPort: 3030
---
apiVersion: v1
kind: Service
metadata:
  name: account-service
spec:
  type: ClusterIP
  selector:
    app: account-service
  ports:
    - name: grpc
      port: 3030
      targetPort: 3030
