kubernetes-manifests/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: account-loadbalancer
spec:
  selector:
    app: account
  ports:
    - protocol: TCP
      port: 3030
      targetPort: 3030
  type: LoadBalancer
