kubernetes-manifests/product-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
spec:
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: server
          securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - all
          privileged: false
          readOnlyRootFilesystem: true
          image: product-service
          ports:
            - containerPort: 3035
          resource:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
            # readinessProbe:
            #   initialDelaySeconds: 20
            #   periodSeconds: 15
            #   exec:
            #     command: ["/bin/grpc_health_probe", "-addr=:9555"]
            # livenessProbe:
            #   initialDelaySeconds: 20
            #   periodSeconds: 15
            #   exec:
            #     command: ["/bin/grpc_health_probe", "-addr=:9555"]
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  type: ClusterIP
  selector:
    app: product-service
  ports:
    - name: grpc
      port: 3035
      targetPort: 3035
